--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
     --text-color: #fff;
-    --text-color-2: red;
-    --hover-color: red;
+    --text-color-2: rgb(255, 0, 0);
+    --hover-color: rgb(255, 0, 0);
     --hover-color-2: #fff;
     --bg-color: #222;
-    --btn-bg: red;
+    --btn-bg: rgb(255, 0, 0);
     --btn-hover-bg: #fff;
 }
 
@@ -105,8 +105,6 @@ p {
 hr {
     width: 80%;
     margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
 }
 
 .center {
@@ -122,6 +120,10 @@ hr {
     z-index: 1000;
     font-size: 30px;
     background-color: transparent;
+}
+
+.nav-active {
+    color: var(--hover-color)
 }
 
 .contact-icons {
@@ -147,7 +149,7 @@ hr {
     left: 0;
     z-index: 999;
     width: 100%;
-    padding: 40px 0px 20px;
+    padding: 40px 0 20px;
     background-color: var(--bg-color);
     border-top: 1px solid grey;
     text-transform: uppercase;
@@ -196,8 +198,8 @@ h1 {
 
 h2 {
     font-family: 'Nothing You Could Do', cursive;
-    font-size: 2rem;
-    color: yellow; 
+    font-size: 2.5rem;
+    color: rgb(255, 255, 0); 
     text-shadow: 1px 5px 3px var(--bg-color);
     margin-bottom: 10px; 
 }
@@ -233,8 +235,8 @@ section.portfolio {
     flex-wrap: wrap;
     justify-content: space-evenly;
     font-size: 2rem;
-    margin-top: 75px;
-    margin-bottom: 75px;
+    margin-top: 35px;
+    margin-bottom: 35px;
     /* text-shadow: 2px 3px 4px #837f7f; */
 }
 
@@ -297,7 +299,7 @@ section.portfolio {
 .folio-container ul li {
     background-color: transparent;
     padding: 8px 20px;
-    margin: 0px;
+    margin: 0;
     cursor: pointer;
 }
 
@@ -330,7 +332,7 @@ section.portfolio {
     border-radius: 15px 0;
 }
 
-.folio-item img {
+.folio-image {
     position: absolute;
     top: 0;
     left: 0;
@@ -341,13 +343,24 @@ section.portfolio {
 }
 
 .folio-overlay {
+    transition: .5s ease;
     opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-.folio-item img:hover {
+.folio-item:hover .folio-image {
     transition: all 600ms ease-in-out;
     filter: blur(5px);
     transform: scale(1.1);
+}
+
+.folio-item:hover .folio-overlay {
+    opacity: 1;
 }
 
 .show-folio-item {
@@ -419,8 +432,85 @@ footer {
     background-color: #111;
 }
 
+/*  -- MODAL -- */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-100px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-100px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
+
 /* MEDIA QUERIES */
 @media screen and (min-width: 1025px) {
+    hr {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
     /* NAVIGATION - MQ */
     .contact-icons {
         position: fixed;
@@ -429,7 +519,7 @@ footer {
         z-index: 1000;
         font-size: 30px;
         background-color: transparent;
-        margin-top: 0px;
+        margin-top: 0x;
     }
 
     .contact-icons i {
@@ -447,7 +537,7 @@ footer {
         z-index: 999;
         width: 100%;
         height: 50px;
-        padding: 40px 0px;
+        padding: 40px 0;
         background-color: var(--bg-color);
         opacity: .9 !important;
         border-bottom: 1px solid grey;
@@ -506,6 +596,11 @@ footer {
 
     .resume-text {
         padding-left: 50px;
+    }
+
+    .language-list {
+        margin-top: 75px;
+        margin-bottom: 75px;
     }
     
     /* CONTACT - MQ */
