--- a/assets/css/birds.css
+++ b/assets/css/birds.css
@@ -20,24 +20,28 @@
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
 }
+
 .bird--one {
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
   -webkit-animation-delay: -0.5s;
           animation-delay: -0.5s;
 }
+
 .bird--two {
   -webkit-animation-duration: 0.9s;
           animation-duration: 0.9s;
   -webkit-animation-delay: -0.75s;
           animation-delay: -0.75s;
 }
+
 .bird--three {
   -webkit-animation-duration: 1.25s;
           animation-duration: 1.25s;
   -webkit-animation-delay: -0.25s;
           animation-delay: -0.25s;
 }
+
 .bird--four {
   -webkit-animation-duration: 1.1s;
           animation-duration: 1.1s;
@@ -47,8 +51,9 @@
 
 .bird-container {
   position: absolute;
+  z-index: 20;
   top: 26%;
-  left: -28%;
+  left: -31%;
   transform: scale(0) translateX(-10vw);
   will-change: transform;
   -webkit-animation-name: fly-right-one;
@@ -58,24 +63,34 @@
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
 }
+
+@media screen and (min-width: 700px) {
+  .bird-container {
+    left: -15%;
+  }
+}
+
 .bird-container--one {
   -webkit-animation-duration: 15s;
           animation-duration: 15s;
   -webkit-animation-delay: 0;
           animation-delay: 0;
 }
+
 .bird-container--two {
   -webkit-animation-duration: 16s;
           animation-duration: 16s;
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
 }
+
 .bird-container--three {
   -webkit-animation-duration: 14.6s;
           animation-duration: 14.6s;
   -webkit-animation-delay: 9.5s;
           animation-delay: 9.5s;
 }
+
 .bird-container--four {
   -webkit-animation-duration: 16s;
           animation-duration: 16s;
@@ -94,6 +109,7 @@
     background-position: -900px 0;
   }
 }
+
 @-webkit-keyframes fly-right-one {
   0% {
     transform: scale(0.3) translateX(-10vw);
@@ -120,6 +136,7 @@
     transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
 }
+
 @keyframes fly-right-one {
   0% {
     transform: scale(0.3) translateX(-10vw);
@@ -146,6 +163,7 @@
     transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
 }
+
 @-webkit-keyframes fly-right-two {
   0% {
     transform: translateY(-2vh) translateX(-10vw) scale(0.5);
@@ -172,6 +190,7 @@
     transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
 }
+
 @keyframes fly-right-two {
   0% {
     transform: translateY(-2vh) translateX(-10vw) scale(0.5);
