--- a/assets/css/logo-slider.css
+++ b/assets/css/logo-slider.css
@@ -16,7 +16,6 @@
     color: #eee;
     overflow: hidden;
     position: relative;
-    margin-bottom: 30px;
   }
 
   .marquee:before, .marquee:after {
@@ -68,7 +67,9 @@
   .marquee-content li img {
     width: 100%;
     /* height: 100%; */
-    border: 2px solid #eee;
+    /* border: 2px solid #eee; */
+    padding-left: 25px;
+    padding-right: 25px;
   }
   
   @media (max-width: 600px) {
@@ -79,4 +80,10 @@
       --marquee-elements-displayed: 3;
     }
     .marquee:before, .marquee:after { width: 5rem; }
+  }
+
+  @media screen and (min-width: 700px) {
+    .marquee {
+      margin-bottom: 30px;
+    }
   }
