--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 :root {
     --text-color: #fff;
-    --text-color-2: rgb(255, 0, 0);
+    --text-color-2: #e00000;
     --text-color-3: #222;
-    --hover-color: rgb(255, 0, 0);
+    --hover-color: #e00000;
     --hover-color-2: #fff;
     --bg-color: #222;
-    --btn-bg: rgb(255, 0, 0);
+    --btn-bg: #e00000;
     --btn-hover-bg: #fff;
 }
 
@@ -74,6 +74,7 @@ button,
     padding: 10px 15px;
     margin-right: 10px;
     text-align: center;
+    font-size: 1.14rem;
     font-weight: 600;
     z-index: 998;
     cursor: pointer;
@@ -260,6 +261,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-self: center;
+    width: 100%;
   }
 
   .skills p {
@@ -271,7 +273,7 @@ h2 {
   .skill {
     margin: 1em 0 .5em;
     position: relative;
-    width: 35.5em;
+    width: 100%;
   }
   
   .skill__type {
@@ -335,6 +337,93 @@ h2 {
     margin-bottom: 50px;
 }
 
+
+/* Testimonials */
+.wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin: 75px auto 100px;
+}
+
+.wrapper .box{
+  background: #111;
+  width: calc(33% - 10px);
+  padding: 25px;
+  border-radius: 3px;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.15);
+}
+
+.wrapper .box i.quote{
+  font-size: 20px;
+  color: var(--btn-bg);
+}
+
+.wrapper .box .content{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+
+.box .info .name{
+  font-weight: 600;
+  font-size: 17px;
+}
+
+.box .info .job{
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--btn-bg);
+}
+
+.box .info .stars{
+  margin-top: 7px;
+}
+
+.box p {
+    margin-bottom: 5px;
+}
+
+.box .info .stars i{
+  color: #ff9529;
+}
+
+.box .content .image{
+  height: 75px;
+  width: 75px;
+  padding: 3px;
+  background: var(--btn-bg);
+  border-radius: 50%;
+}
+
+.content .image img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+
+.box:hover .content .image img{
+  border-color: #fff;
+}
+
+@media (max-width: 1045px) {
+  .wrapper .box{
+    width: calc(50% - 10px);
+    margin: 10px 0;
+  }
+}
+
+@media (max-width: 702px) {
+  .wrapper .box{
+    width: 100%;
+  }
+}
+
 /* -- PORTFOLIO SECTION -- */
 section.portfolio {
     max-width: 1750px;
@@ -342,7 +431,7 @@ section.portfolio {
 
 .terminal-logo {
     color: var(--text-color);
-    margin-top: 25px;
+    margin-bottom: 85px;
     font-size: 2rem;
     font-weight: 500;
 }
@@ -378,7 +467,7 @@ section.portfolio {
 }
 
 .folio-container {
-    padding: 30px 0 25px;
+    padding: 50px 0 100px;
 }
 
 .folio-container ul {
@@ -396,7 +485,7 @@ section.portfolio {
 }
 
 .folio-container ul li.active {
-    background-color: red;
+    background-color: var(--btn-bg);
     color: #fff;
 }
 
@@ -473,16 +562,42 @@ section.portfolio {
 }
 
 /* -- CONTACT SECTION -- */
+section.contact {
+    background-image: url("assets/images/contact-bg.jpg");
+    max-width: 100%;
+    padding: 50px 0 50px;
+}
+
+.contact-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 0;
+    background-color: rgb(17, 17, 17, .2);
+    margin-top: -50px;
+}
+
 #contact h3 {
-    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 15px;
+}
+
+#contact h3,
+.contact-subtitle {
+    max-width: 45%;
+    margin: auto;
+    position: relative;
+    z-index: 10;
 }
 
 .contact-container {
     display: grid;
     grid-template-columns: 1fr;
-    text-align: center;
-    max-width: 1750px;
+    position: relative;
+    z-index: 10;
+    max-width: 1025px;
     margin:  0 auto 50px;
+    padding: 30px 50px;
     color: #f1f1f1;
 }
 
@@ -515,11 +630,6 @@ section.portfolio {
     margin-top: 50px;
 }
 
-.half-width-input {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
 input,
 textarea {
     width: 100%;
@@ -528,8 +638,13 @@ textarea {
     margin-bottom: 10px;
     padding: 10px;
     font-size: 1.2rem;
-    outline-color: red;
+    outline-color: var(--btn-bg);
     color: #f1f1f1;
+}
+
+.half-width-input {
+    display: flex;
+    gap: 10px;
 }
 
 .submit-btn button {
@@ -539,7 +654,7 @@ textarea {
 /* -- FOOTER -- */
 footer {
     height: 20vh;
-    background-color: #111;
+    background-color:#000;
 }
 
 /*  -- MODAL -- */
@@ -669,13 +784,14 @@ footer {
 
 .slider-social a,
 .slider-social i {
+    color: var(--text-color-2);
     font-size: 1.1rem;
     margin-left: 5px;
     margin-right: 5px;
 }
 
 .slider-social i:hover {
-    color: var(--hover-color);
+    color: var(--hover-color-2);
     cursor: pointer;
 }
 
@@ -803,7 +919,6 @@ footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         align-items: center;
-        padding-top: 50px;
     }
 
     .resume-text {
