Style updates and clenaed up code DRYer now

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* CSS Styles components are located at the following:
+    
+
+*/
+
 :root {
     --text-color: #fff;
     --text-color-2: #e00000;
@@ -147,6 +152,7 @@ hr {
 
 .nav-active {
     color: var(--hover-color);
+    font-size: 18px;
 }
 
 .contact-icons {
@@ -343,7 +349,12 @@ h2 {
 }
   
 .skill__inner-bar--60 {
-    width: 90%;
+    width: 60%;
+    background: var(--text-color-2);
+}
+
+.skill__inner-bar--50 {
+    width: 50%;
     background: var(--text-color-2);
 }
   
