--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,6 +1,6 @@
 .loader-wrapper {
     --line-width: 5px;
-    --curtain-color: #f1faee;
+    --curtain-color: #333;
     --outer-line-color: #a8dadc;
     --middle-line-color: #457b9d;
     --inner-line-color: #1d3557;
