--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -29,6 +29,10 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    margin-bottom: 65px;
+}
+
 .image {
     width: 100%;
     height: 100vh;
@@ -54,17 +58,6 @@ h1 {
     margin: auto;
     padding-right: 15px;
     padding-left: 15px;
-}
-
-button {
-    width: 200px;
-    padding:15px;
-    margin-top: 30px;
-}
-
-button:hover {
-    color: var(--hover-color);
-    background-color: var(--btn-hover-bg);
 }
 
 @media screen and (min-width: 1025px) {
